--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jishnu-jayabal.github.io/aravindportfolio",
+  "homepage": "https://rahulpr070.github.io/rahulpr",
   "name": "RahulPR",
   "version": "0.1.0",
   "private": true,
@@ -56,7 +56,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
