--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rahulpr070.github.io/rahulpr",
+  "homepage": "https://rahulpr070.github.io/rahulprportfolio",
   "name": "RahulPR",
   "version": "0.1.0",
   "private": true,
