--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://rahulpr070.github.io/rahulprportfolio",
-  "name": "RahulPR",
+  "name": "rahulprportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
